Archive2/64/fedfe5fd57c6c4/output
main.cpp: In function 'int main()':
main.cpp:10:10: error: cannot bind 'test' lvalue to 'test&&'
     set(t); // why
          ^
main.cpp:6:6: note: in passing argument 1 of 'void set(test&&)'
 void set(test&&) { }
      ^
main.cpp:12:10: error: cannot bind 'test' lvalue to 'test&&'
     set(x); // why
          ^
main.cpp:6:6: note: in passing argument 1 of 'void set(test&&)'
 void set(test&&) { }
      ^
1
